<resources>
    <string name="app_name" translatable="false">Harmony</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Restaurant</string>
    <string name="title_notifications">Hotel</string>
    <string name="title_more">Harmony Social</string>
    <string name="title_settings">Settings</string>
    <string name="title_roomkey">Room Key</string>
    <string name="title_comingsoon">Coming Soon</string>
    <string name="title_activity_no_internet">NoInternet</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- URLs -->
    <string name="updates_url" translatable="false">https://sites.google.com/view/hios-by-thc/download#h.51zx1qe3xfrl</string>
    <string name="whatsnew_url" translatable="false">https://sites.google.com/view/hios-by-thc/download#h.evwm3pfxwkdn</string>
    <string name="hiosmusic_url" translatable="false">https://sites.google.com/view/hios-by-thc/download-hiosmusic#h.ogr0r3hzljpf</string>
    <string name="hiosweather_url" translatable="false">https://sites.google.com/view/hios-by-thc/download-hiosmusic#h.ogr0r3hzljpf</string>
    <string name="hienterprises_url" translatable="false">https://sites.google.com/view/thehighlandcafe</string>
    <string name="support_url" translatable="false">https://sites.google.com/view/thehighlandcafe/customer-support</string>
    <string name="facebook_url">https://www.facebook.com/profile.php?id=100095224335357</string>
    <string name="instagram_url">https://www.instagram.com/thehighlandcafe/</string>
    <string name="thehighlandcafe_url">https://sites.google.com/view/thcrestaurants</string>
    <string name="hios_url">https://sites.google.com/view/hios-by-thc</string>
    <string name="hiossocial_url">https://sites.google.com/view/hios-by-thc/hisocial</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_feedback">Send Feedback</string>
    <string name="title_activity_support">Customer Support</string>

    <!-- Settings Titles -->
    <string name="updates_header">Updates</string>

    <string name="apps_header">Apps and Services</string>

    <string name="websites_header">Websites</string>

    <string name="about_app">About Harmony</string>

    <string name="socials_header">Socials</string>

    <!-- Updates Preferences -->
    <string name="updates_title">Check for Updates</string>
    <string name="updates_summary">This Version: 2.2.1</string>

    <string name="whatsnew_title">What\'s New?</string>

    <!-- Apps Preferences -->
    <string name="hiosmusic_title">HiMusic</string>
    <string name="hiosmusic_summary">This is our brilliant, free, music streaming platform. Your Music, Your Vibe.</string>

    <string name="hiosweather_title">Harmony Weather</string>
    <string name="hiosweather_summary">This is our weather app, which simply allows you to check the weather, use widgets, and more.</string>

    <string name="hiossocial_summary">Our brand new social media app, this app allows you to chat with friends, and more!</string>

    <!-- Websites Preferences -->
    <string name="hienterprises_title">HiEnterprises™ Website</string>
    <string name="hios_title">HiOS™ Website</string>
    <string name="thehighlandcafe_title">The Highland Cafe™ Website</string>

    <!-- Socials Preferences -->
    <string name="facebook_title">HiEnterprises™ Facebook Page</string>
    <string name="instagram_title">HiEnterprises™ Instagram Profile</string>
    <string name="instagram_summary">\@thehighlandcafe</string>
    <string name="title_activity_help_center">Help</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_helpcenter">helpcenterActivity</string>

    <!-- Preference Titles -->
    <string name="securelogin_header">Secure Login</string>
    <string name="internet_header">WiFi and Internet</string>

</resources>