<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--UPDATES CATEGORY-->
    <PreferenceCategory app:title="@string/updates_header">
        <Preference
            android:title="@string/updates_title"
            android:summary="@string/updates_summary"
            app:icon="@drawable/ic_update" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/updates_url" >
            </intent>
        </Preference>

        <Preference
            android:title="@string/whatsnew_title"
            app:icon="@drawable/ic_whatsnew" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/whatsnew_url" >
            </intent>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/apps_header">
        <Preference
            android:title="@string/hiosmusic_title"
            android:summary="@string/hiosmusic_summary"
            app:icon="@drawable/ic_hiosmusic" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/hiosmusic_url" >
            </intent>
        </Preference>

        <Preference
            android:title="@string/hiosweather_title"
            android:summary="@string/hiosweather_title"
            app:icon="@drawable/ic_hiosweather" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/hiosweather_url" >
            </intent>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="Websites">
        <Preference
            android:title="@string/hienterprises_title"
            app:icon="@drawable/ic_hienterprises" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/hienterprises_url" >
            </intent>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="Socials">
        <Preference
            android:title="@string/facebook_title"
            app:icon="@drawable/ic_facebook" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/facebook_url" >
            </intent>
        </Preference>

        <Preference
            android:title="@string/instagram_title"
            android:summary="@string/instagram_summary"
            app:icon="@drawable/ic_instagram" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/instagram_url" >
            </intent>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>