<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:title="@string/hiosweather_title"
        android:summary="@string/hiosweather_summary"
        app:icon="@drawable/ic_hiosweather" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/hiosweather_url" >
        </intent>
    </Preference>

    <Preference
        android:title="@string/title_more"
        android:summary="@string/hiossocial_summary"
        app:icon="@drawable/ic_hiossocial">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/hiossocial_url" >
        </intent>
    </Preference>
</PreferenceScreen>