<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:title="@string/facebook_title"
        app:icon="@drawable/ic_facebook" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/facebook_url" >
        </intent>
    </Preference>

    <Preference
        android:title="@string/instagram_title"
        android:summary="@string/instagram_summary"
        app:icon="@drawable/ic_instagram" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/instagram_url" >
        </intent>
    </Preference>

    <Preference
        android:title="@string/threads_title"
        android:summary="@string/instagram_summary"
        app:icon="@drawable/ic_threads" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/threads_url" >
        </intent>
    </Preference>
</PreferenceScreen>