<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
<!--NOTE: this will be regarded as 'preferences' when it comes to the package...-->
    <Preference
        app:fragment="com.nugget.hios.SettingsActivity$UpdatesPreferences"
        app:icon="@drawable/ic_update"
        app:key="updates_header"
        app:title="@string/updates_header" />

    <Preference
        app:fragment="com.nugget.hios.SettingsActivity$AppsPreferences"
        app:icon="@drawable/ic_moreicon"
        app:key="apps_header"
        app:title="@string/apps_header" />

    <Preference
        app:fragment="com.nugget.hios.SettingsActivity$WebsitePreferences"
        app:icon="@drawable/ic_website"
        app:key="website_header"
        app:title="@string/websites_header" />

    <Preference
        app:fragment="com.nugget.hios.SettingsActivity$SocialsPreferences"
        app:icon="@drawable/ic_socials"
        app:key="socials_header"
        app:title="@string/socials_header" />

    <Preference
        app:fragment="com.nugget.hios.ui.preferences.AboutFragment"
        app:icon="@drawable/ic_aboutapp"
        app:key="about_header"
        app:title="@string/about_app" />

</PreferenceScreen>