<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_restaurant"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_worsteastern"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/new_rewards"
        android:title="@string/title_rewards" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_roomkey"
        android:title="@string/title_roomkey" />
</menu>