<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.nugget.hios.ui.helpcenter.RestaurantFragment"
        app:icon="@drawable/ic_restauranticon"
        app:key="restaurant_header"
        app:title="@string/title_dashboard" />

    <Preference
        app:fragment="com.nugget.hios.ui.helpcenter.InternetFragment"
        app:icon="@drawable/ic_interneticon"
        app:key="internet_header"
        app:title="@string/internet_header" />

    <Preference
        app:fragment="com.nugget.hios.ui.helpcenter.UpdatesFragment"
        app:icon="@drawable/ic_update"
        app:key="updates_header"
        app:title="@string/updates_header" />

    <Preference
        app:fragment="com.nugget.hios.ui.helpcenter.MoreFragment"
        app:icon="@drawable/ic_support"
        app:key="more_header"
        app:title="@string/title_activity_support" />

</PreferenceScreen>