<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/supportMoreVertical"
        android:icon="@drawable/vertmore"
        android:title="@string/title_more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/helpSupport"
                android:title="@string/title_activity_support"
                android:icon="@drawable/ic_support"
                android:onClick="support" />
            <item
                android:id="@+id/helpTc"
                android:title="@string/title_activity_tc"
                android:icon="@drawable/ic_tc"
                android:onClick="tc" />
            <item
                android:id="@+id/topmenuFeedback"
                android:title="@string/title_activity_feedback"
                android:icon="@drawable/ic_feedback"
                android:onClick="feedback" />
        </menu>
    </item>
</menu>